images and more formatting and spacing correction

--- a/style.css
+++ b/style.css
@@ -4,9 +4,31 @@ h1,h2,p{
 
 body{
     background-image:url(beans.jpg);
+    font-family: sans-serif;
+    padding:20px;
+}
+hr{
+    height: 2px;
+    background-color: brown;
+    border-color:brown;
+}
+h1,h2{
+    font-family: Impact, serif;
+}
+h1{
+    font-size:40px;
+    margin-top:0px;
+    margin-bottom:15px;
+}
+h2{
+    font-size:30px;
+}
+.established{
+    font-style: italic;
 }
 .menu{
     padding:20px;
+    max-width: 500px;
     width: 80%;
     background-color: burlywood;
     margin:auto auto;
@@ -21,5 +43,32 @@ body{
     width:25%;
 }
 .item p{
+    font-size: 18px;
     display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.bottom-line{
+    margin-top: 25px;
+}
+/*FOOTER*/
+footer{
+    font-size: 14px;
+}
+a {
+    color: black;
+}
+a:visited{
+    color: black;
+}
+a:hover{
+    color:brown
+}
+a:active{
+    color:brown;
+}
+.address{margin-bottom:5px;}
+img{
+    display:block;
+    margin: auto auto;
 }
